--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<!--   fix icon color in light theme   -->
     <link rel="shortcut icon" type="image/png" href="./epl-logo.png"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
